--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # DataSource config
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/jamigo
+spring.datasource.url=jdbc:mysql://localhost:3306/jamigo?serverTimezone=Asia/Taipei
 spring.datasource.username=root
 spring.datasource.password=0000
 # Connection Pool
@@ -9,9 +9,9 @@ spring.datasource.hikari.maximum-pool-size=10
 spring.datasource.hikari.connection-timeout=30000
 
 # JPA/Hibernate config
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
-#                                   default : org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy
+#                                    default : org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
 # Spring Web config
@@ -24,3 +24,16 @@ logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss.SSS} [%level] [%t] %msg%n
 logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss.SSS} [%level] [%t] [%line] %msg%n
 logging.file.path=./
 
+# Sending email config
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=jamigo.contact@gmail.com
+spring.mail.password=Jamigo1234
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.debug=true
+
+# Redis
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
